@@ -1,5 +1,6 @@
 #
-#   Copyright (C) 1994,95,96,97,99,2001,02,03 Free Software Foundation, Inc.
+#   Copyright (C) 1994, 1995, 1996, 1997, 1999, 2001, 2002, 2003, 2008 Free
+#   Software Foundation, Inc.
 #
 #   This program is free software; you can redistribute it and/or
 #   modify it under the terms of the GNU General Public License as
@@ -46,7 +47,7 @@ SRCS=$(FSSRCS) $(IOSRCS) $(FSYSSRCS) $(OTHERSRCS)
 MIGSTUBS=fsServer.o ioServer.o fsysServer.o fsys_replyUser.o
 
 libname = libtrivfs
-HURDLIBS = iohelp ports shouldbeinlibc
+HURDLIBS = fshelp iohelp ports shouldbeinlibc
 OBJS= $(sort $(subst .c,.o,$(SRCS)) $(MIGSTUBS))
 LCLHDRS = trivfs.h fsmutations.h priv.h
 MIGSFLAGS=-imacros $(srcdir)/fsmutations.h
