@@ -1,3 +1,8 @@
+2008-12-08  Thomas Schwinge  <tschwinge@gnu.org>
+
+	* Makefile (HURDLIBS): Add fshelp.  Reported by Olaf Buddenhagen
+	<olafbuddenhagen@gmx.net>.
+
 2007-11-13  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* times.c (trivfs_set_atime, trivfs_set_mtime): Adapt to ``struct
